log
Fri Apr 22 15:24:45 UTC 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
a6f1935
Fri Apr 22 15:27:37 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
bd1e25a
Fri Apr 22 15:27:55 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
1b0ea74
Fri Apr 22 15:28:26 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
67507a6
Fri Apr 22 15:34:40 UTC 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
bae2e52
Fri Apr 22 15:47:23 UTC 2022: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
aa26c79
Fri Apr 22 15:52:43 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|6
total_score: 5/70
027ef50
